# LICENSE

./:  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: database-Copy1.csv  database-Copy1.md  database.csv  database.md
functions/: filter.py  filter1.ipynb  filtering.ipynb  newdatabase.ipynb  newdatabase.py  ranking.py  ranking_for_pregnancy.ipynb
notebooks/: README_filtering.txt  README_function1.txt  README_functions-used.txt  README_general.txt  README_global.txt  README_helpfull.txt  README_progresses.txt  README_scripts.txt  README_selecting.txt
scripts/: selecting_ranking.ipynb  visualizing.ipynb  week2.ipynb  withfunctions.ipynb
src/Proj_VCB/: __init__.py
src/Proj_VCB/functions/: __init__.py  filter.ipynb  filtering.ipynb  newdatabase.ipynb  newdatabase.py  ranking_for_pregnancy.ipynb  ranking_for_pregnancy.py  visualizing.ipynb  visualizing.py
src/Proj_VCB/scipts/: helpfull.ipynb
src/Proj_VCB/scripts/: __init__.py  helpfull.ipynb  ranking_pregnant women.ipynb  run_rankingforpregnancy.ipynb  run_selectingbest.ipynb  run_visualizing.ipynb  selectingbest.ipynb  visualizing.ipynb  week2.ipynb
tests/: __init__.py  test_filtering.ipynb  test_newdatabase.ipynb  test_ranking_for_pregnancy.ipynb  test_visualizing.ipynb
