[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Proj_VCB"  
version = "0.1.0"
description = "A package which founds best possible cream"
authors = [
    {name = "Victoire Lang", email = "victoire.lang@epfl.ch"},{name = "Blanche Billarant", email = "blanche.billarant-laubignat@epfl.ch"}, {name = "Clara Moret", email = "clara.moret@epfl.ch"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
keywords = ["chemistry", "computation", "example"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
"Homepage" = "https://github.com/victoirelang/Project.git"
"Documentation" = "https://example.com/project-documentation"
"Source Code" = "https://github.com/victoirelang/Project.git"

[tool.poetry]
name = "cdk_package"
version = "0.1.0"
description = "A sample CDK package"
authors = ["Victoire Lang <victoire.lang@epfl.ch>, Blanche Billarant <blanche.billarant-laubignat@epfl.ch>, Clara Moret <clara.moret@epfl.ch>"]
license = "MIT"
readme = "README.md"
homepage = "https://example.com/project-homepage"
repository = "https://github.com/victoirelang/Project.git"
documentation = "https://example.com/project-documentation"
keywords = ["chemistry", "computation", "example"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "numpy >= 1.18.0",
    "pandas >= 1.0.0",
    "rdkit>=2021.03.1"
]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.isort]
profile = "black"
